<resources>
    <string name="app_name">FE</string>
    <!--navigation-->
    <string name="label_navigation_income">Income</string>
    <string name="label_navigation_consumption">Consumption</string>
    <string name="label_navigation_community">Community</string>
    <string name="label_navigation_my_page">My page</string>

    <!--community-->
    <string name="tv_item_community_detail_feed_comment_title">Comments</string>
    <string name="et_community_detail_input_comment_hint">Please enter the comments.</string>
    <string name="appbar_community_posting_title">POSTING</string>
    <string name="tv_community_posting_description_category">Please select the category of the post.</string>
    <string name="tv_community_posting_label_category">Category</string>
    <string name="tv_community_posting_category_share_delivery">share delivery</string>
    <string name="tv_community_posting_category_daily">daily</string>
    <string name="et_community_posting_title">Please enter a title.</string>
    <string name="tv_community_posting_title_length">0/20</string>
    <string name="et_community_posting_content">Please enter the content.</string>
    <string name="tv_community_posting_content_length">0/500</string>

    <!--test-->
    <string name="dummy">testtestesttestesttestesttestesttestesttesttesttestesttestesttestesttestesttestesttesttesttestesttestesttestesttestesttestesttesttesttestesttestesttestesttestesttestesttest</string>

    <!--income-->
    <string name="tv_item_income_card_finish_title">Payday</string>
    <string name="tv_item_income_card_finish_description">Have you all received it?</string>
    <string name="tv_item_income_card_finish_no">NO</string>
    <string name="tv_item_income_card_finish_yes">YES</string>
    <string name="tv_income_appbar_title">INCOME</string>
    <string name="tv_income_detail_work_check_title">Work details</string>
    <string name="tv_income_detail_work_check_filter_latest">latest</string>
    <string name="format_date_yyyy.MM">yyyy.MM</string>
    <string name="format_date_MMM_d">MMM d</string>
    <string name="tv_income_add_appbar_title">Add Schedule</string>
    <string name="tv_sign_in_title">FairE</string>
    <string name="tv_sign_in_description">Fair Economy for you</string>
    <string name="btn_sign_in_navigate_main">Continue with google</string>
    <string name="tv_nationality_title">Nationality setting</string>
    <string name="tv_nationality_description">Befor joining FE, please choose your nationality!</string>
    <string name="tv_nationality_china">China</string>
    <string name="tv_nationality_vietnam">Vietnam</string>
    <string name="btn_nationality">Completion</string>
    <string name="tv_select_type_salary_hourly">Hourly wage</string>
    <string name="tv_select_type_salary_monthly">Monthly wage</string>
    <string name="tv_select_type_salary_weekly">Weekly wage</string>
    <string name="tv_income_add_working_hour">Please select working hour.</string>
    <string name="tv_income_tax_title">Tax 3.3%</string>
    <string name="tv_income_tax_description">The 3.3 percent tax is usually an income tax on earned income, which is levied on the income earned by an individual through work. The tax rate is usually applied in the process of filing and paying income taxes each year between May and June, after the end of the year in which earned income is generated. The exact tax period and procedure may vary depending on the tax laws of national and local governments.</string>
    <string name="comma_number">%,d</string>
</resources>