<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color">

        <ImageView
            android:id="@+id/iv_sign_in_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sign_in_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:includeFontPadding="false"
            android:text="@string/tv_sign_in_title"
            android:textAppearance="@style/TextAppearance.FE.Bold_26"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_sign_in_logo"
            app:layout_goneMarginTop="10dp" />

        <TextView
            android:id="@+id/tv_sign_in_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:includeFontPadding="false"
            android:text="@string/tv_sign_in_description"
            android:textAppearance="@style/TextAppearance.FE.Bold_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_in_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_in_navigate_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="88dp"
            android:background="@drawable/shape_fill_grayf5_7_rec"
            android:drawableStart="@drawable/ic_google_logo"
            android:includeFontPadding="false"
            android:paddingHorizontal="20dp"
            android:paddingVertical="14dp"
            android:text="@string/btn_sign_in_navigate_main"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.FE.Bold_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>